testcases/error/invalid_assignment.veryl
module invalid_assignment (
    a: input logic,
) {
    assign a = 1;
}
